fixing footer layout issues, Refactor models

--- a/app/styles/custom/_layout.scss
+++ b/app/styles/custom/_layout.scss
@@ -1,16 +1,15 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+  margin-bottom: 130px;
 }
 
 
 /**
  * Header
  */
-navbar {
-
-}
-
 .navbar-brand {
   padding:4px 0;
   > img {
@@ -18,6 +17,13 @@ navbar {
     display:inline;
   }
 }
+
+/**
+ * Main Content
+ */
+ .main-content-container {
+ }
+
 /**
  * Footer
  */
@@ -25,7 +31,7 @@ footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 106;
+  height: 106px;
   background-color: #f5f5f5;
   .footer-grid-wrapper {
     background:#efefef;
